# OptiMeal

./: .gitignore
backend/: check_users.py  database.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt
backend/routes/: analytics.py  auth.py  import_export.py  logs.py  menu.py  profile.py  recommendations.py  user.py
backend/supabase/: schema.sql
optimeal-frontend/: package-lock.json  package.json
optimeal-frontend/app/: layout.tsx  page.tsx
optimeal-frontend/app/dashboard/: page.tsx
optimeal-frontend/app/history/: page.tsx
optimeal-frontend/app/history/[year]/[month]/: page.tsx
optimeal-frontend/app/login/: page.tsx
optimeal-frontend/app/menu-upload/: page.tsx
optimeal-frontend/app/menus/[menuId]/: page.tsx
optimeal-frontend/app/onboarding/: page.tsx
optimeal-frontend/app/recommendations/[menuId]/: page.tsx
optimeal-frontend/app/signup/: page.tsx
optimeal-frontend/components/: AuthGuard.tsx  mode-toggle.tsx  navbar.tsx
optimeal-frontend/components/analytics/: MonthlySpendingChart.tsx  TopItemsList.tsx
optimeal-frontend/context/: AuthContext.tsx
optimeal-frontend/lib/: api.ts  supabase.ts
optimeal-frontend/public/: manifest.json
